syntax = "proto3";

package proto;

import "entities.proto";
option go_package = "./service";

service LinkService {
  rpc Create(CreateLinkRequest) returns (CreateLinkResponse);
  rpc Update(UpdateLinkRequest) returns (UpdateLinkResponse);
  rpc Delete(DeleteLinkRequest) returns (DeleteLinkResponse);
  rpc GetLinkByHash(GetLinkByHashRequest) returns (GetLinkByHashResponse);
  rpc GetByID(GetLinkByIDRequest) returns (GetLinkByIDResponse);
  rpc GetAllLinks(GetAllLinksRequest) returns (GetAllLinksResponse);
  rpc CountLinks(CountLinksRequest) returns (CountLinksResponse);
}

message CreateLinkRequest {
    string url = 1;
}

message CreateLinkResponse {
  Link link = 1;
  ErrorResponse error = 2;
}


message UpdateLinkRequest {
  uint32 id = 1;
  string url = 2;
  string hash = 3;
}

message UpdateLinkResponse {
  Link link = 1;
  ErrorResponse error = 2;
}


message DeleteLinkRequest {
    uint32 id = 1;
    bool unscoped = 2;
}

message DeleteLinkResponse {
    ErrorResponse error = 1;
}


message GetLinkByHashRequest {
  string hash = 1;
}

message GetLinkByHashResponse {
  Link link = 1;
  ErrorResponse error = 2;
}


message GetLinkByIDRequest {
  uint32 id = 1;
}

message GetLinkByIDResponse {
  Link link = 1;
  ErrorResponse error = 2;
}


message GetAllLinksRequest {
  int32 limit = 1;
  int32 offset = 2;
  bool include_deleted = 3;
}

message GetAllLinksResponse {
  repeated Link links = 1;
  int64 count = 2;
  ErrorResponse error = 3;
}

message CountLinksResponse {
  int64 count = 1;
}

message CountLinksRequest{}
